--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,6 +5,9 @@
     justify-content: space-between;
     height: 50px;
     padding: 0 15px;
+    position: sticky;
+    top: 0;
+    background-color: white;
 
     .left{
         display: flex;
