--- a/src/components/rightbar/rightbar.scss
+++ b/src/components/rightbar/rightbar.scss
@@ -1,3 +1,96 @@
+@import '../../App.scss';
+
 .rightbar{
-    
+   /*  @include themify($themes){ */
+        flex: 3;
+        position: sticky;
+        top: 50px;
+        height: calc(100vh - 50px);//Needed to stay in postition for the scroll
+        overflow: scroll;
+        /* background-color: themed("bgSoft");
+        color: themed("textColor"); */
+        display: none;
+
+        &::-webkit-scrollbar{
+            display: none;
+        }
+        @include mobile{
+            display: block;
+        }
+        .container{
+            padding: 20px;
+
+            .item{
+                box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.09);
+                -webkit-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.09);
+                -moz-box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.09);
+                padding: 20px;
+                margin-bottom: 20px;
+                /* background-color: themed("bg"); */
+
+                span{
+                    /* color: themed("textColorSoft"); */
+                }
+                .user{
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin: 20px 0;
+
+                    .userInfo{
+                        display: flex;
+                        flex-wrap: wrap;
+                        align-items: center;
+                        gap: 10px;
+                        position: relative;
+                        
+                        img{
+                            width: 40px;
+                            height: 40px;
+                            border-radius: 50%;
+                            object-fit: cover;
+                        }
+                        p{
+                            /* color: themed("textColorSoft"); */
+                        }
+                    
+                        .online{
+                            height: 12px;
+                            width: 12px;
+                            border-radius: 50%;
+                            background-color: limegreen;
+                            position: absolute;
+                            top: 0;
+                            left: 30px;
+                        }
+
+                        span{
+                            font-weight: 500;
+                            /* color: themed("textColorSoft"); */
+                        }
+                    }
+                    .buttons{
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+                        flex-wrap: wrap;
+
+                        button{
+                            border: none;
+                            padding: 5px;
+                            color: white;
+                            cursor: pointer;
+
+                            &:first-child{
+                                background-color: #5271ff;
+                            }
+                            &:last-child{
+                                background-color: #f0544f;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+   /*  } */
 }
