--- a/src/components/share/share.scss
+++ b/src/components/share/share.scss
@@ -11,57 +11,87 @@
     padding: 20px;
     margin: 20px 10px; 
 
-    .left{
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid lightgray;
-
-        img{
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            object-fit: cover;
-        }
-        input{
-            margin-left: 10px;
-            border: none;
-            width: 80vw;
-
-            @include tablet{
-                width: 40vw;
-            }
-
-            &:focus{
-                outline: none;
-            }
-        }
+    .container{
         
-    }
-
-    .right{
-        display: flex;
-        align-items: center;
-        gap: 5px;
-
-        img{
-            width: 40px;
-            height: 40px;
-            border-radius: 5px;
-        }
-        button{
+        .top{
             display: flex;
             align-items: center;
-            height: 32px;
-            border: none;
-            border-radius: 5px;
-            padding: 7px 9px;
-            background-color: $secondary;
-            color: $darkTextColor;
-            font-weight: 600;
-            margin-left: 20px;
-            cursor: pointer;
+            gap: 10px;
+            padding-bottom: 10px;
+    
+            .left{
+                display: flex;
+            }
+
+            .right{
+
+                .file{
+                    width: 100px;
+                    height: 100px;
+                    object-fit: cover;
+                    border-radius: 0;
+                }
+            }
+
+            img{
+                border-radius: 50%;
+                width: 40px;
+                height: 40px;
+                object-fit: cover;
+            }
+
+            input{
+                margin-left: 10px;
+                border: none;
+                width: 80vw;
+    
+                @include tablet{
+                    width: 40vw;
+                }
+    
+                &:focus{
+                    outline: none;
+                }
+            }
+
+        }
+
+        .rule{
+            margin-bottom: 15px;
+        } 
+
+        .bottom{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 15px;
+    
+            .left{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+    
+                img{
+                    width: 50px;
+                    height: 50px;
+                    border-radius: 5px;
+                }
+                
+            }
+    
+            button{
+                display: flex;
+                align-items: center;
+                height: 32px;
+                border: none;
+                border-radius: 5px;
+                padding: 15px 10px;
+                background-color: $secondary;
+                color: $darkTextColor;
+                font-weight: 600;
+                cursor: pointer;
+            }  
         }
     }
+    
 }
