--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -17,7 +17,7 @@
         gap: 10px;
 
         .logo{
-            color: $primary;
+            color: $secondary;
             font-weight: 900;
             letter-spacing: .1rem;
             text-transform: uppercase;
@@ -51,18 +51,34 @@
             }
         }
         
-
         .profile-icon{
             cursor: pointer;
             position: relative;
             font-size: 2rem;
-            color: $textColor;
+            color: $primary;
         }
-        .profile-menu{
+        ul{
             position: absolute;
             top: 40px;
-            right: 20px;
-            z-index: 999;
+            width: 30%;
+            z-index: 99;
+
+        }
+        .user{
+            display: flex;
+            gap: 10px;
+            align-items: center;
+            
+            span{
+                font-size: 14px;
+            }
+
+            img{
+                height: 30px;
+                width: 30px;
+                object-fit: cover;
+                border-radius: 50%;
+            }
         }
 
     }
