--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -44,6 +44,10 @@
         
                 }
             }
+
+            .details{
+                position: relative;
+            }
         }
         .content{
             margin: 20px 0;
