Edited apiurl to include author

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -52,7 +52,7 @@
             background-color: $darkTextColor;
             padding: 5px 10px;
             position: absolute;
-            border: 1px solid $primary;
+            border: 1px solid $background;
             border-radius: 10px;
             top: 40px;
             right: 5px;
