--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -9,7 +9,7 @@
         display: flex;
         flex-direction: column-reverse;
         margin-top: 60px;
-        max-width: 70%;
+        max-width: 80%;
 
         @include tablet{
             flex-direction: row-reverse;
@@ -23,8 +23,10 @@
             justify-content: space-between;
             background: $gradient-primary, url("https://images.pexels.com/photos/3228727/pexels-photo-3228727.jpeg?auto=compress&cs=tinysrgb&w=1600") center;
             background-size: cover;
+            display: none;
 
             @include tablet{
+                display: block;
                 flex: 1;
             }
            
