--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,8 +3,8 @@
 .header{
     display: flex;
     justify-content: space-between;
-    height: 50px;
-    padding: 0 15px;
+    min-height: 50px;
+    padding: 15px;
     position: sticky;
     top: 0;
     background-color: white;
@@ -12,10 +12,13 @@
 
     .left{
         display: flex;
-        justify-content: center;
+        flex-wrap: wrap;
         align-items: center;
-        gap: 10px;
+        
 
+        @include mobile{
+            gap: 10px;
+        }
         .logo{
             color: $secondary;
             font-weight: 900;
@@ -37,58 +40,32 @@
 
     .right{
         display: flex;
-        justify-content: center;
         align-items: center;
         gap: 10px;
         
         .logout-button{
             border: 1px solid $primary;
-           /*  background-color: $primary; */
             color: $textColor;
-            padding: 5px 10px;
+            padding: 3px 7px;
             border-radius: 5px;
         }
-        /* .profile-icon{
-            cursor: pointer;
-            position: relative;
-            font-size: 2rem;
-            color: $secondary;
-        }
-        ul{
-            color: $textColor;
-            background-color: $darkTextColor;
-            padding: 5px 10px;
-            position: absolute;
-            border: 1px solid $background;
-            border-radius: 10px;
-            top: 40px;
-            right: 5px;
-            width: 35%;
-            z-index: 99;
-
-            @include tablet{
-                width: 20%;
-                right: 15px;
-            }
-            @include desktop{
-                width: 15%;
-                right: 15px;
-            }
-
-            a{
-                font-size: 18px;
-            }
-        }
-         */
+       
         .user{
-            display: flex;
-            gap: 10px;
-            align-items: center;
             
-            span{
-                font-size: 14px;
-            }
+            .profile-icon{
+                position: relative;
+                cursor: pointer;
 
+            }
+            ul{
+                position: absolute;
+                right: 10px;
+                top: 60px;
+
+                @include mobile{
+                    top: 50px;
+                }
+            }
             img{
                 height: 30px;
                 width: 30px;
