--- a/src/components/share/share.scss
+++ b/src/components/share/share.scss
@@ -21,6 +21,8 @@
     
             .left{
                 display: flex;
+                flex-wrap: wrap;
+                gap: 10px;
             }
 
             .right{
@@ -49,9 +51,6 @@
                     width: 40vw;
                 }
     
-                &:focus{
-                    outline: none;
-                }
             }
 
         }
