--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -3,7 +3,7 @@
     .images{
         width: 100%;
         height: 300px;
-        /* position: relative; */
+        position: relative;
 
         .cover{
             width: 100%;
@@ -13,9 +13,13 @@
         .profile-image{
             width: 100px;
             border-radius: 50%;
-            transform: translateY(-50%);
-            position: relative;
-            left: 50%;
+            position: absolute;
+            object-fit: cover;
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin: auto;
+            top: 250px;
             
         }
     }
