--- a/src/components/share/share.scss
+++ b/src/components/share/share.scss
@@ -21,6 +21,7 @@
     
             .left{
                 display: flex;
+                align-items: center;
                 flex-wrap: wrap;
                 gap: 10px;
             }
