Added comments and likes display

--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -58,6 +58,10 @@
                 object-fit: cover;
                 margin-top: 20px;
             }
+            .likes{
+                display: flex;
+                
+            }
         }
         .info{
             display: flex;
