--- a/src/components/likes/likes.scss
+++ b/src/components/likes/likes.scss
@@ -7,6 +7,7 @@
         ul{
             li{
                 font-size: 22px;
+                cursor: pointer;
             }
         }
         label{
