--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -3,4 +3,12 @@
     flex-direction: column;
     gap: 30px;
     margin: 20px 10px; 
+    position: relative;
+
+    .add-post{
+        cursor: pointer;
+        position: absolute;
+        top: -20px;
+        left: -10px;
+    }
 }
