Edited add post icon

--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -1,3 +1,5 @@
+@import '../../App.scss';
+
 .posts{
     display: flex;
     flex-direction: column;
@@ -9,6 +11,10 @@
         cursor: pointer;
         position: absolute;
         top: -20px;
-        left: -10px;
+        left: -25px;
+        border: 1px solid $primary;
+        border-radius: 5px;
+        color: $primary;
+        
     }
 }
