Adjusted margin posts + sidebars

--- a/src/components/leftbar/leftbar.scss
+++ b/src/components/leftbar/leftbar.scss
@@ -19,7 +19,7 @@
         }
 
         .container{
-            padding: 20px;
+            padding: 10px 20px;
 
             hr{
                 margin: 20px 0;
