--- a/src/components/rightbar/rightbar.scss
+++ b/src/components/rightbar/rightbar.scss
@@ -18,7 +18,7 @@
             display: block;
         }
         .container{
-            padding: 20px;
+            padding: 10px 20px;
 
             .item{
                 box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.09);
