--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    margin: 20px 10px; 
+    margin: 10px; 
     position: relative;
 
     .add-post{
