--- a/src/components/postDetail/postDetail.scss
+++ b/src/components/postDetail/postDetail.scss
@@ -1,24 +1,31 @@
 @import '../../App.scss';
 
 .edit{
-    position: absolute;
-    right: 0;
+    width: 50vw;
+    align-items: center;
+    margin: 0 auto;
+    margin-top: 50px;
     background-color: #fffefe;
     border: 2px solid $background;
     border-radius: 5px;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    z-index: 200;
         
     .edit-form{
+        padding: 10px 0;
         display: flex;
         flex-direction: column;
-        
         gap: 5px;
 
         label{
-            font-size: 15px;
+            font-size: 14px;
+        }
+
+        input{
+            border-radius: 5px;
+            padding: 5px;
+            border: 1px solid $background;
         }
     }
 
