--- a/src/components/postDetail/postDetail.scss
+++ b/src/components/postDetail/postDetail.scss
@@ -11,7 +11,16 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
+    position: relative;
         
+    .back-link{
+        display: flex;
+        gap: 5px;
+        position: absolute;
+        left: 0;
+        color: $secondary;
+        top: -30px;
+    }
     .edit-form{
         padding: 10px 0;
         display: flex;
@@ -27,6 +36,37 @@
             padding: 5px;
             border: 1px solid $background;
         }
+        img{
+            border-radius: 5px;
+            margin: 10px 0;
+        }
+        .item{
+            display: flex;
+            margin-top: 5px;
+            gap: 10px;
+            cursor: pointer;
+            
+            .cancel{
+                background-color: $primary;
+                color: $darkTextColor;
+                font-size: 14px;
+                padding: 0 7px;
+                
+            }
+            button{
+                display: flex;
+                align-items: center;
+                height: 32px;
+                border: none;
+                border-radius: 5px;
+                padding: 15px 10px;
+                background-color: $secondary;
+                color: $darkTextColor;
+                font-weight: 600;
+                cursor: pointer;
+            }
+        }
+        
     }
 
     .edit-button, .delete-button{
