--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -46,8 +46,26 @@
             }
 
             .details{
-                position: relative;
+                /* position: relative; */
                 cursor: pointer;
+
+                .more{
+                    position: relative;
+                    
+                    a{
+                        position: absolute;
+                        width: auto;
+                        margin: 0 auto;
+                        right: 0;
+                        
+                        background-color: $primary;
+                        color: $darkTextColor;
+                        padding: 5px 10px;
+                        font-weight: 600;
+                        font-size: 18px;
+                        text-align: right;
+                    }
+                }
             }
         }
         .content{
