--- a/src/components/postDetails/postDetails.scss
+++ b/src/components/postDetails/postDetails.scss
@@ -1,12 +1,13 @@
 @import '../../App.scss';
 
 .more{
-    display: flex;
+    /* display: flex; */
     position: relative;
     
     a{
         position: absolute;
-        left: -40px;
+        width: 350px;
+        left: -260px;
         background-color: $primary;
         color: $darkTextColor;
         padding: 5px 10px;
