--- a/src/components/rightbar/rightbar.scss
+++ b/src/components/rightbar/rightbar.scss
@@ -14,7 +14,7 @@
         &::-webkit-scrollbar{
             display: none;
         }
-        @include mobile{
+        @include tablet{
             display: block;
         }
         .container{
