--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -3,17 +3,18 @@
 .posts{
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 20px;
     margin: 10px; 
     position: relative;
 
     .add-post{
         cursor: pointer;
         position: absolute;
-        top: 0;
-        right: 0;
+        top: -10px;
+        right: -10px;
         border: 1px solid $primary;
         border-radius: 5px;
-        color: $primary; 
+        color: $primary;
+        background-color: $darkTextColor; 
     }
 }
