--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -14,6 +14,7 @@
         }
         .profile-image{
             width: 80px;
+            height: 80px;
             border-radius: 50%;
             position: absolute;
             object-fit: cover;
@@ -31,7 +32,7 @@
         align-items: center;
         gap: 15px;
         flex-direction: column;
-        padding: 60px 20px;
+        padding: 60px 15px;
 
         @include tablet{
             flex-direction: row;
@@ -40,10 +41,11 @@
         }
         .left{
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 10px; 
+            gap: 5px; 
            
+            .social-icon{
+                cursor: pointer;
+            }
         }
         .center{
             display: flex;
@@ -53,25 +55,17 @@
             gap: 10px;
 
             @include tablet{
-                position: absolute;
+                /* position: absolute;
                 transform: translateX(-50%);
-                left: 50%;
-            }
-
-            .top{
-                display: flex;
-                position: relative;
-                gap: 5px;
-
-                .social-icon{
-                    cursor: pointer;
-                }
+                left: 50%; */
+                align-items: flex-start;
             }
             
             .bottom{
 
                 .follow-button{
                     position: relative;
+                    top: 5px;
                     border-radius: 5px;
                     background-color: $secondary;
                     color: $darkTextColor;
@@ -79,6 +73,10 @@
                     text-transform: uppercase;
                     font-weight: 600;
                     letter-spacing: .05rem;
+
+                    @include tablet{
+                        /* top: 30px; */
+                    }
                 }
             }
             
@@ -132,5 +130,11 @@
                 }
             }
         }
+    }
+
+    .profile-posts{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
     }
 }
