Added friend list to rightbar

--- a/src/components/layout/rightbar/rightbar.scss
+++ b/src/components/layout/rightbar/rightbar.scss
@@ -33,10 +33,10 @@
                 margin: 20px 0;
 
                 .userInfo{
-                    display: flex;
+                    /* display: flex;
                     flex-wrap: wrap;
                     align-items: center;
-                    gap: 10px;
+                    gap: 10px; */
                     position: relative;
                     
                     img{
