--- a/src/components/layout/leftbar/leftbar.scss
+++ b/src/components/layout/leftbar/leftbar.scss
@@ -38,6 +38,9 @@
                     gap: 10px;
                     align-items: center;
                     
+                    a{
+                        text-decoration: none;
+                    }
                     span{
                         font-size: 14px;
                     }
