--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -11,6 +11,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            padding: 10px;
         }
         .profile-image{
             width: 80px;
