--- a/src/components/layout/rightbar/rightbar.scss
+++ b/src/components/layout/rightbar/rightbar.scss
@@ -24,7 +24,8 @@
             padding: 20px;
             margin-bottom: 20px;
 
-            span{
+            .header{
+                font-weight: 600;
             }
             .user{
                 display: flex;
