--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -14,6 +14,7 @@
         display: flex;
         flex-wrap: wrap;
         align-items: center;
+        position: relative;
         
 
         @include mobile{
@@ -25,12 +26,34 @@
             letter-spacing: .1rem;
             text-transform: uppercase;
         }
+        .menu-icon{
+           display: flex;
+           font-size: 2rem;
+           align-items: center;
+           position: relative;
+           top: -1px;
+           left: 3px;
 
+            @include mobile{
+                display: none;
+            }
+        }
+        .navigation{
+            position: absolute;
+            top: 30px;
+            background-color: $darkTextColor;
+            padding: 0 20px 0 0;
+        }
         .search{
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 5px;
+            display: none;
+
+            @include mobile{
+                display: block;
+            }
             
             input{
                 padding: 5px;
