--- a/src/components/posts/postDetail/postDetail.scss
+++ b/src/components/posts/postDetail/postDetail.scss
@@ -1,7 +1,7 @@
 @import '../../../App.scss';
 
 .edit{
-    width: 50vw;
+    width: 90vw;
     align-items: center;
     margin: 0 auto;
     margin-top: 50px;
@@ -12,6 +12,13 @@
     display: flex;
     flex-direction: column;
     position: relative;
+
+    @include mobile{
+        width: 70vw;
+    }
+    @include tablet{
+        width: 50vw;
+    }
         
     .back-link{
         display: flex;
