--- a/src/components/profiles/profiles.scss
+++ b/src/components/profiles/profiles.scss
@@ -5,6 +5,7 @@
         display: flex;
         align-items: center;
         gap: 5px;
+        padding: 5px 0;
 
         img{
             width: 30px;
