--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -34,7 +34,7 @@
            top: -1px;
            left: 3px;
 
-            @include mobile{
+            @include tablet{
                 display: none;
             }
         }
