--- a/src/components/layout/leftbar/leftbar.scss
+++ b/src/components/layout/leftbar/leftbar.scss
@@ -11,7 +11,7 @@
         &::-webkit-scrollbar{
             display: none;
         }
-        @include mobile{
+        @include tablet{
             display: block;
         }
 
