--- a/src/components/layout/leftbar/leftbar.scss
+++ b/src/components/layout/leftbar/leftbar.scss
@@ -32,6 +32,7 @@
                 .header{
                     font-weight: 600;
                     padding: 0;
+                    text-transform: uppercase;
                 }
 
                 .item{
