--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,7 +1,7 @@
 @import '../../App.scss';
 
 .profile{
-
+    
     .images{
         width: 100%;
         height: 300px;
@@ -55,10 +55,11 @@
             align-items: center;
             gap: 10px;
 
+            .web{
+                word-break: break-word;
+            }
+
             @include tablet{
-                /* position: absolute;
-                transform: translateX(-50%);
-                left: 50%; */
                 align-items: flex-start;
             }
             
