Edited title + profile details + share

--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -27,6 +27,7 @@
             text-transform: uppercase;
         }
         .menu-icon{
+            cursor: pointer;
            display: flex;
            font-size: 2rem;
            align-items: center;
