--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,12 +1,14 @@
 @import '../../App.scss';
 
 .sidebar{
-        width: 100vw;
         flex: 2;
-        position: sticky;
+        position: absolute;
         top: 50px;
-        height: calc(100vh - 50px);//Needed to stay in position for the scroll
+        left: -15px;
+        background-color: $form-background;
+        height: calc(100vh - 50px);
         overflow: scroll;
+        padding: 10px;
 
         &::-webkit-scrollbar{
             display: none;
@@ -28,7 +30,7 @@
 
                 .header{
                     font-weight: 600;
-                    padding: 0;
+                    padding: 10px;
                 }
 
                 .item{
