--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -1,14 +1,16 @@
 @import '../../../App.scss';
 
-.header{
+header{
     display: flex;
     justify-content: space-between;
     min-height: 50px;
     padding: 15px;
     position: sticky;
     top: 0;
-    background-color: white;
+    background-color: $tertiary;
     z-index: 10;
+    border-radius: 0 0 20px 20px;
+    margin-bottom: 10px;
 
     .left{
         display: flex;
@@ -21,45 +23,45 @@
             gap: 10px;
         }
         .logo{
-            color: $secondary;
+            color: $textColor;
             font-weight: 900;
             letter-spacing: .1rem;
             text-transform: uppercase;
         }
         .menu-icon{
-            cursor: pointer;
+           cursor: pointer;
            display: flex;
            font-size: 2rem;
            align-items: center;
            position: relative;
            top: -1px;
-           left: 3px;
+           left: 2px;
 
             @include tablet{
                 display: none;
             }
         }
-        .navigation{
-            position: absolute;
-            top: 30px;
-            background-color: $darkTextColor;
-            padding: 0 20px 0 0;
-        }
-        .search{
+        .sidebar-container{
             display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 5px;
-            display: none;
+            gap: 10px;
 
-            @include mobile{
-                display: block;
-            }
-            
-            input{
-                padding: 5px;
+            .search{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 5px;
+                display: none;
+    
+                @include mobile{
+                    display: block;
+                }  
             }
         }
+        input{
+            padding: 5px;
+            margin-left: 5px;
+        }
+    
     }
 
     .right{
@@ -78,6 +80,9 @@
             border-radius: 5px;
         }
        
+        .sidebar-list{
+             
+        }
         .user{
             
             .profile-icon{
