Removed search header

--- a/src/components/notifications/notifications.scss
+++ b/src/components/notifications/notifications.scss
@@ -19,8 +19,8 @@
             right: 0;
             padding: 10px 20px;
             width: 30vw;
-            background-color: $form-background;
-            color: $textColor;
+            background-color: $textColor;
+            color: $darkTextColor;
         }
     }
 }
