Adjusted menu button

--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -35,8 +35,12 @@ header{
            align-items: center;
            position: relative;
            top: -1px;
-           left: 2px;
+           left: 10px;
 
+           @include mobile{
+            left: 0;
+            
+           }
             @include tablet{
                 display: none;
             }
