--- a/src/components/posts/post/post.scss
+++ b/src/components/posts/post/post.scss
@@ -53,7 +53,7 @@
                 a{
                     position: absolute;
                     right: 0;
-                    background-color: $primary;
+                    background-color: $secondary;
                     color: $darkTextColor;
                     padding: 10px;
                     font-weight: 600;
