--- a/src/components/posts/post/post.scss
+++ b/src/components/posts/post/post.scss
@@ -58,6 +58,7 @@
                     padding: 10px;
                     font-weight: 600;
                     font-size: 18px;
+                    border-radius: 0 0 10px 10px;
                 }
             }
         }
